--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         </div>
         <div class="image-content">
-            <img src="/images/banner.png" alt="">
+            <img src="./images/banner.png" alt="">
         </div>
 
     </article>
