--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <!-- ===========Quick list of Our Features area======== -->
     <section class="feature-section">
         <div class="images-area">
-            <img src="/images/team1.png" alt="">
-            <img src="/images/team2.png" alt="">
-            <img src="/images/team3.png" alt="">
-            <img src="/images/team4.png" alt="">
+            <img src="./images/team1.png" alt="">
+            <img src="./images/team2.png" alt="">
+            <img src="./images/team3.png" alt="">
+            <img src="./images/team4.png" alt="">
         </div>
         <div class="text-area-content">
             <h1>Quick list <strong>of Our</strong><br><span> Features </span></h1>
