--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
         <div class="logo-band">
             <div class="logo">
                 <img src="../images/sponsors/amazon.png" alt="">
-                <img src="../images/sponsors/figma.png" alt="">
-                <img src="/images/sponsors/google.png" alt="">
-                <img src="/images/sponsors/spotify.png" alt="">
-                <img src="/images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+                <img src="/.images/sponsors/google.png" alt="">
+                <img src="/..images/sponsors/spotify.png" alt="">
+                <img src="../.images/sponsors/telerama.png" alt="">
             </div>
         </div>
     </section>
