--- a/index.html
+++ b/index.html
@@ -141,22 +141,22 @@
     <section>
         <div class="box-area">
             <div class="boxes">
-                <img src="../images/icons/ribon.png" alt="">
+                <img src="./images/icons/ribon.png" alt="">
                 <h1>54</h1>
                 <p>Awards Winnings</p>
             </div>
             <div class="boxes">
-                <img src="../images/icons/projects.png" alt="">
+                <img src="./images/icons/projects.png" alt="">
                 <h1>1458</h1>
                 <p>Project Finished</p>
             </div>
             <div class="boxes">
-                <img src="../images/icons/customers.png" alt="">
+                <img src="./images/icons/customers.png" alt="">
                 <h1>590</h1>
                 <p>Clients Worked</p>
             </div>
             <div class="boxes">
-                <img src="../images/icons/email.png" alt="">
+                <img src="./images/icons/email.png" alt="">
                 <h1>22578</h1>
                 <p>Email Send</p>
             </div>
@@ -176,11 +176,11 @@
     <section>
         <div class="logo-band">
             <div class="logo">
-                <img src="../images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
                 <img src="./images/sponsors/figma.png" alt="">
-                <img src="/.images/sponsors/google.png" alt="">
-                <img src="/..images/sponsors/spotify.png" alt="">
-                <img src="../.images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
             </div>
         </div>
     </section>
